Fix share options popup alignment on desktop

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,6 +43,9 @@ main {
 }
 
 .component {
+  display: grid;
+  grid-template-rows: minmax(1fr, 200px) 1fr;
+  grid-template-columns: auto;
   background: $white;
   width: 87%;
   max-width: 730px;
@@ -53,6 +56,7 @@ main {
 .thumbnail {
   &__image {
     width: 100%;
+    height: 100%;
     border-radius: 12px 12px 0px 0px;
     object-fit: cover;
   }
@@ -60,9 +64,6 @@ main {
 
 .article {
   box-shadow: 0px 40px 40px -10px $dropshadowBlue;
-
-  &__container {
-  }
 
   &__text {
     padding: 2rem 2rem 0rem 2rem;
@@ -180,5 +181,47 @@ footer {
   padding: 2rem 0;
   .attribution {
     text-align: center;
+  }
+}
+
+@include break('small') {
+  .component {
+    grid-template-rows: 1fr;
+    grid-template-columns: 285px 1fr;
+
+    .thumbnail {
+      &__image {
+        border-radius: 12px 0px 0px 12px;
+      }
+    }
+
+    .article {
+      &__details {
+        &__share {
+          position: relative;
+          &__options {
+            width: fit-content;
+            height: 100%;
+            border-radius: 12px;
+            left: -300%;
+            top: -75px;
+            padding: 1.5rem 2rem;
+
+            &::after {
+              content: '';
+              width: 0px;
+              height: 0px;
+              border-left: 12px solid transparent;
+              border-right: 12px solid transparent;
+              border-top: 12px solid $greyBlue300;
+              position: absolute;
+              bottom: -12px;
+              left: 50%;
+              transform: translateX(-50%);
+            }
+          }
+        }
+      }
+    }
   }
 }
